--- a/css/style.css
+++ b/css/style.css
@@ -774,7 +774,7 @@ section:nth-child(odd) .animate.scroll,
     left: -100%;
     width: 100%;
     padding: 1rem 4%;
-    background: var(--main-color);
+    background: var(--bg-color);
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     z-index: 1;
