--- a/css/style.css
+++ b/css/style.css
@@ -318,8 +318,8 @@ span {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(0);
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   border-radius: 50%;
   border-top: 0.2rem solid var(--second-bg-color);
   border-bottom: 0.2rem solid var(--second-bg-color);
@@ -366,7 +366,7 @@ span {
 .portfolio-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2.5rem;
+  gap: 3rem;
 }
 
 .portfolio-container .portfolio-box {
@@ -523,27 +523,31 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
-  width: 83%;
+  width: 80%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
-  width: 67%;
+  width: 75%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
-  width: 69%;
+  width: 75%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
-  width: 70%;
+  width: 90%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
-  width: 67%;
+  width: 75%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
-  width: 65%;
+  width: 85%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
+  width: 85%;
 }
 
 .contact {
